--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "prebuild": "rimraf dist",
+    "build": "npx @nestjs/cli build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start": "npx @nestjs/cli start",
+    "start:dev": "npx @nestjs/cli start --watch",
+    "start:debug": "npx @nestjs/cli start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "@nestjs/bull": "^11.0.4",
+    "@nestjs/cli": "^11.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -57,7 +59,8 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.28",
     "uuid": "^13.0.0",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "rimraf": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
